# quantum-transpiler-regression-testing

./: .gitattributes  .gitignore  BASR_Synopsis_Presentation.pptx  CITATION.cff  FORWARD_REGRESSION_PLAN.md  LICENSE  METHODOLOGY.md  PROJECT_PLAN.md  README.md  RELEASE_WINDOW_DECISION.md  REPRODUCE.md  REVISION_TODO.md  SCALEUP_PROTOCOLS.md  VERSION_1.md  pyproject.toml  ~$BASR_Synopsis_Presentation.pptx
GSC files/: GSC questions.docx  GSC_Presentation.pptx  GSC_Presentation_v4.pptx  Proposal v2.4 for GSC.docx  affidavit.docx  ~$C questions.docx
SLR/Protocol/: SLR_Protocol_Quantum_Compiler_Testing.docx
SLR/SLR/: Agent_Search_Prompts.md  SLR_Preliminary_Results_and_Extraction.docx  SLR_Review_Workbook.xlsx
configs/: budgets.yaml  cutoff.yaml  seeds.yaml  stage_map.yaml  thresholds.yaml
data/: observability_mining.csv
data/derived/: labels.json
data/events/: EVENTS_AUDIT.md  HISTORICAL_CANDIDATES.md  PROVENANCE_BACKLOG.md  events.csv  events.json
data/manifest_static/: manifest_static.json  (+1 more)
environment/: ENV.md  requirements.anchor.in  requirements.harness.in  requirements.lock.sha256
paper/: COVER_LETTER.md  PAPER.docx  PAPER_DRAFT.md  Response_to_Reviewers.docx  build_paper.js
scripts/: add_forward_event.py  find_introducing_commit.py  merge_raters.py  mining_stats.py  verify_h1_isolated.py  verify_h1_property.py  verify_h4_perf.py
tests/: test_expanded.py  test_historical_runner.py  test_phase0.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_scaffold.py  test_stage2_oracle.py  test_targeted.py
(+523 files in other folders)
